libsawang_la_SOURCES += \
	gear/channel.c gear/channel.h \
	gear/confvar.c gear/confvar.h \
	gear/error.h \
	gear/exit.h gear/exit.c \
	gear/define.h \
	gear/dispatcher.c gear/dispatcher.h \
	gear/dispatcher_heartbeat.c gear/dispatcher_heartbeat.h gear/dispatcher_heartbeat_struct.h \
	gear/heartbeat.c gear/heartbeat.h  \
	gear/log.c gear/log.h  \
	gear/subscribe.c gear/subscribe.h gear/subscribe_struct.h \
	gear/work.c gear/work.h
