libsawang_la_SOURCES += \
    gear/alivemutex.c gear/alivemutex.h \
    gear/callback.h \
	gear/confvar.c gear/confvar.h \
    gear/error.h \
    gear/globaldata.h \
    gear/gonggoalive.c gear/gonggoalive.h \
    gear/log.c gear/log.h \
    gear/parsequeue.c gear/parsequeue.h \
    gear/proxy.h \
    gear/proxyactivator.c gear/proxyactivator.h \
    gear/proxychannel.c gear/proxychannel.h \
    gear/proxycomm.c gear/proxycomm.h \
    gear/proxyservicestatus.h \
    gear/proxysubscribe.c gear/proxysubscribe.h \
    gear/proxyuuid.c gear/proxyuuid.h \
    gear/replyqueue.c gear/replyqueue.h \
    gear/respondtable.c gear/respondtable.h \
    gear/util.c gear/util.h \
	gear/work.c gear/work.h